objects/nFORCE__Data_Archive__c.object
<CustomObject>
    <description>This object stores field values and metadata associated to sObjects in a Snapshot.</description>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>The system automatically populates this field with the 18 character Salesforce ID of the corresponding record.</description>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data_Snapshot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field associates a Data Archive record to a Data Snapshot record.</description>
        <label>Data Snapshot</label>
        <referenceTo>nFORCE__Data_Snapshot__c</referenceTo>
        <relationshipLabel>Data Archives</relationshipLabel>
        <relationshipName>Data_Archives</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Api_Name_Hash__c</fullName>
        <description>This field is an MD5 hash of the API Name.</description>
        <label>Field API Name Hash</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Api_Name__c</fullName>
        <description>The system automatically populates this field with the Field API Name captured in the Snapshot.</description>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Details__c</fullName>
        <description>The system automatically populates this field with the field details captured in the Snapshot.</description>
        <label>Field Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Order__c</fullName>
        <description>The system automatically populates this field with the field order based on the respective objects.</description>
        <label>Field Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Type__c</fullName>
        <description>The system automatically populates this field with the field type of the field captured in the Snapshot.</description>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Value__c</fullName>
        <description>The system automatically populates this field with the value captured in the Snapshot.</description>
        <label>Field Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Encrypted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The system automatically populates this required number field with 0 or 1 based on the field type the system snapshots. By default, the field value is 0. If the captured field is an encrypted field, the system populates the field with 1.</description>
        <label>Is Encrypted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Related__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The system automatically populates this required number field with 0 or 1 based on the field type the system snapshots. By default, the field value is 0. If the captured field is a related field, the system populates the field with 1.</description>
        <label>Is Related</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Numeric_Index__c</fullName>
        <description>This field is used as a numeric index.</description>
        <label>Numeric Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Object_Type__c</fullName>
        <description>The system automatically populates this field with the context object type captured in the Snapshot.</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Archive</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>